--- a/package.json
+++ b/package.json
@@ -1,21 +1,33 @@
 {
-	"version": "1.0.0",
-	"private": true,
-	"description": "",
-	"main": "index.js",
-	"dependencies": {},
-	"devDependencies": {
-		"eslint": "7.1.0",
-		"eslint-config-prettier": "6.11.0",
-		"eslint-plugin-import": "2.20.2",
-		"eslint-plugin-prettier": "3.1.3",
-		"prettier": "2.0.5"
-	},
-	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1",
-		"lint": "eslint .",
-		"format": "prettier --write '**/*.js' '**/*.md'"
-	},
-	"author": "Synthetix",
-	"license": "MIT"
+  "version": "1.0.0",
+  "private": true,
+  "description": "Shared resources used across Synthetix docker images.",
+  "main": "index.js",
+  "dependencies": {
+    "dockerfile-template": "0.2.0",
+    "minimist": "1.2.5"
+  },
+  "devDependencies": {
+    "eslint": "7.10.0",
+    "eslint-config-prettier": "6.12.0",
+    "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-prettier": "3.1.4",
+    "prettier": "2.1.2"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint .",
+    "format": "prettier --write '**/*.js' '**/*.md'"
+  },
+  "author": "Synthetix",
+  "license": "MIT",
+  "name": "docker-shared",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Synthetixio/docker-shared.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Synthetixio/docker-shared/issues"
+  },
+  "homepage": "https://github.com/Synthetixio/docker-shared#readme"
 }
